# Mercenary_Dev

./: .editorconfig  .gitattributes  .gitignore  Cronologia_dev.md  Dockerfile.prod  Mercenary_Job.md  Plan_Ejecucion_Tecnica.md  README.md  TASKS.md  Wireframes_MVP.md  docker-compose.prod.yml  docker-compose.yml  guia_automatizacion.md  start_backend.ps1  vercel.json
.husky/: pre-commit
Documentacion_backend/: 01_Arquitectura_Backend.md  04_Configuracion_y_Despliegue.md
Documentacion_devOps/: 01_Integracion_Backend_Frontend.md  04_CI_CD_Pipeline.md  README.md
Documentacion_frontend/: 01_Arquitectura_Frontend.md  02_Pantallas_UI_UX.md  03_Integracion_Backend.md  05_Despliegue_Distribucion.md  README.md
Documentacion_web/: 01_Website_Overview.md  04_Deployment_Guide.md  05_Maintenance_Guide.md
Documentacion_webApp/: 00_Estado_Final_Proyecto.md  04_Guia_Implementacion.md  05_Setup_Proyecto.md  07_Desarrollo_Completo.md  08_Proximos_Pasos_Desarrollo.md  09_Implementacion_Final_Completa.md  10_Documentacion_Final_Completa.md  11_Integracion_Movil_Completa.md  12_Desarrollo_Paralelo_Avanzado.md  14_Sistema_Seguridad_Avanzada.md  README.md  Testing_Checklist_WebApp.md
Documentacion_web_usuarios/: 02_Technical_Architecture.md
Plan_desarrollo/: Diseño_UI_UX.md  Especificaciones_Diseño.md  GUIA_CRONOLOGICA.md  Plan_Ejecucion_Tecnica.md  README.md  Sistema_Diseño.md  Wireframes_MVP.md
backend/: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  __init__.py  alembic.ini  auth.py  check_db.py  check_db_schema.py  check_postgres_service.ps1  config.py  crud.py  database.py  docker-compose.prod.yml  docker-compose.yml  drop_user_skill_table.py  find_postgres.ps1  logging.conf  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py  reset_db_password.ps1  schemas.py  setup_postgres_path.ps1  test_db_connection_fixed.py  verify_db_connection.py
backend/app/: __init__.py  initial_data.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: __init__.py  announcements.py  auth.py  categories.py  contracts.py  health.py  jobs.py  payments.py  projects.py  proposals.py  skills.py  users.py
backend/app/core/: __init__.py  config.py  password_utils.py  security.py
backend/app/crud/: __init__.py  announcement.py  base.py  category.py  contract.py  job.py  project.py  proposal.py  skill.py  user.py
backend/app/db/: base_class.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0c45cddd0492_fix_user_job_relationship.py  3dfb508aad3a_standardize_terminology_client_to_.py  7bbc3a820ec0_update_users_table.py
backend/app/models/: __init__.py  announcement.py  base.py  category.py  contract.py  job.py  profile.py  project.py  proposal.py  review.py  skill.py  user.py
backend/app/schemas/: __init__.py  announcement.py  category.py  contract.py  job.py  project.py  proposal.py  skill.py  token.py  user.py
backend/app/services/: __init__.py
backend/backup_old_structure/: auth.py  check_schema.py  database.py  main.py  test_db_connection.py  test_register.py
backend/config/: __init__.py  base.py  production.py
backend/migrations/: env.py
backend/routers/: users.py
backend/scripts/: add_role_column.py  check_db.py  check_db_encoding.py  check_db_schema.py  check_schema.py  debug_auth.py  fix_enum_case.py  fix_migration.py  init_db.py  inspect_db.py  test_auth.py  test_auth_enhanced.py  test_register.py  test_register_enhanced.py  verify_schema.py
docs/: Desarrollo App Tablón de Anuncios_.md  Roadmap_Desarrollo_Completo.md
mercenary-web-platform/: next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
mercenary_app/: pubspec.yaml
mobile-app/: README.md  pubspec.yaml
scripts/: bootstrap.ps1  lint.ps1  release.ps1  test.ps1
web-app/: .eslintrc.json  .gitignore  .prettierrc  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
web-informative/: .gitignore  index.html  server.py  (+1 more)
(+245 files in other folders)
